k8s/001-core-concepts/007-ingress/001-ingress-minimal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goglides-minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/footest"
        backend:
          service: 
            name: goglides-foo-service
            port:
              number: 5678
