k8s/001-core-concepts/007-ingress/003-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goglides-host-ingress
spec:
  rules:
  - host: "jar.goglides.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: goglides-jar-service
            port:
              number: 5678
## curl -H "Host: foo.goglides.local" http://localhost/foo
